--- a/PA1_template.html
+++ b/PA1_template.html
@@ -307,7 +307,7 @@ hist(stepsPerDay2,breaks=10)
 stepsPerMins2&lt;-tapply(data2$steps,data2$interval,mean)
 </code></pre>
 
-<p>Without NA&#39;s, mean and median are the same.The histogram shows a great increase in the frequency of days with 10000 to 11000 steps.</p>
+<p>With NA&#39;s replaced, mean and median are the same.The histogram shows a great increase in the frequency of days with 10000 to 11000 steps.</p>
 
 <h2>Are there differences in activity patterns between weekdays and weekends?</h2>
 
